preferenced added in user-update
